--- a/report_template.html
+++ b/report_template.html
@@ -1,30 +1,174 @@
-<!doctype html><html><head><meta charset="utf-8">
-<style>
- @page { size:A4; margin:28mm 24mm }
- body { font-family: "Inter","JetBrains Mono",system-ui,sans-serif; color:#0a0a0a }
- h1,h2{ font-weight:600; letter-spacing:-.02em } .dot{ color:#00c9a7 } .meta{ color:#767676; font-size:12px }
- table{ width:100%; border-collapse:collapse } th,td{ padding:6px 8px; border-bottom:1px solid #eaeaea; text-align:left }
-</style></head><body>
-<h1>calm<span class="dot">.</span>profile — diagnostic</h1>
-<div class="meta">generated {{ now()() }}</div>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <style>
+      @page {
+        size: A4;
+        margin: 28mm 24mm;
+      }
+      body {
+        font-family: "Inter", "JetBrains Mono", system-ui, sans-serif;
+        color: #0a0a0a;
+        line-height: 1.6;
+        font-size: 14px;
+      }
 
-<h2>archetype</h2>
-<p>primary: <strong>{{ archetype|title }}</strong></p>
+      /* systematic typography */
+      h1,
+      h2,
+      h3,
+      h4,
+      h5,
+      h6,
+      p,
+      span,
+      div,
+      button,
+      input,
+      select,
+      label {
+        text-transform: lowercase;
+      }
 
-<h2>scores</h2>
-<table><thead><tr><th>axis</th><th>score</th></tr></thead><tbody>
-  {% for k,v in (scores or {}).items() %}<tr><td>{{k}}</td><td>{{v}}</td></tr>{% endfor %}
-</tbody></table>
+      h1,
+      h2 {
+        font-weight: 300;
+        letter-spacing: -0.02em;
+        color: #0a0a0a;
+      }
 
-<h2>recommendations</h2>
-<ol>
-  {% if recommendations %}{% for r in recommendations %}<li>{{r}}</li>{% endfor %}
-  {% else %}
-  <li>consolidate project tracking to a single source of truth.</li>
-  <li>introduce a weekly planning cadence + request queue.</li>
-  <li>protect maker time with async-first comms window.</li>
-  {% endif %}
-</ol>
+      h1 {
+        font-size: 2rem;
+        line-height: 1.2;
+        margin-bottom: 16px;
+      }
 
-<p class="meta">syrıs<span class="dot">.</span> — calm in the chaos of creative work</p>
-</body></html>
+      h2 {
+        font-size: 1.25rem;
+        line-height: 1.3;
+        margin-bottom: 12px;
+        margin-top: 24px;
+      }
+
+      .dot {
+        color: #00c9a7;
+        font-weight: 400;
+      }
+
+      .meta {
+        color: #666666;
+        font-size: 12px;
+        font-family: "JetBrains Mono", monospace;
+        letter-spacing: 0.05em;
+        margin-bottom: 24px;
+      }
+
+      /* systematic spacing */
+      .section {
+        margin-bottom: 24px;
+      }
+
+      table {
+        width: 100%;
+        border-collapse: collapse;
+        margin-bottom: 16px;
+      }
+
+      th,
+      td {
+        padding: 8px 12px;
+        border-bottom: 1px solid #e5e5e5;
+        text-align: left;
+        font-size: 14px;
+      }
+
+      th {
+        font-family: "JetBrains Mono", monospace;
+        font-size: 12px;
+        color: #666666;
+        letter-spacing: 0.05em;
+        text-transform: uppercase;
+      }
+
+      td {
+        color: #0a0a0a;
+      }
+
+      /* recommendations list */
+      ol {
+        margin: 0;
+        padding-left: 20px;
+      }
+
+      li {
+        margin-bottom: 8px;
+        color: #333333;
+        line-height: 1.5;
+      }
+
+      /* footer */
+      .footer {
+        margin-top: 48px;
+        padding-top: 16px;
+        border-top: 1px solid #e5e5e5;
+        font-family: "JetBrains Mono", monospace;
+        font-size: 11px;
+        color: #999999;
+        letter-spacing: 0.05em;
+      }
+
+      .footer .dot {
+        color: #00c9a7;
+      }
+    </style>
+  </head>
+  <body>
+    <h1>calm<span class="dot">.</span>profile — diagnostic</h1>
+    <div class="meta">generated {{ now()() }}</div>
+
+    <h2>archetype</h2>
+    <div class="section">
+      <p>primary: <strong>{{ archetype|title }}</strong></p>
+    </div>
+
+    <h2>scores</h2>
+    <div class="section">
+      <table>
+        <thead>
+          <tr>
+            <th>axis</th>
+            <th>score</th>
+          </tr>
+        </thead>
+        <tbody>
+          {% for k,v in (scores or {}).items() %}
+          <tr>
+            <td>{{k}}</td>
+            <td>{{v}}</td>
+          </tr>
+          {% endfor %}
+        </tbody>
+      </table>
+    </div>
+
+    <h2>recommendations</h2>
+    <div class="section">
+      <ol>
+        {% if recommendations %}{% for r in recommendations %}
+        <li>{{r}}</li>
+        {% endfor %} {% else %}
+        <li>consolidate project tracking to a single source of truth.</li>
+        <li>introduce a weekly planning cadence + request queue.</li>
+        <li>protect maker time with async-first comms window.</li>
+        {% endif %}
+      </ol>
+    </div>
+
+    <div class="footer">
+      <p>
+        syrıs<span class="dot">.</span> — calm in the chaos of creative work
+      </p>
+    </div>
+  </body>
+</html>
